---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --silent
working directory: fixtures/tsgolint
----------

Found 0 warnings and 81 errors.
Finished in <variable>ms on 60 files with 59 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
